@@ -56,3 +56,10 @@ Power Word: Stun -> Ethereal, 50(66) HP.
 The 66 is just for my satisfaction.
 Ethereal so you have to make do with just the Debuff Note to 'carry' the card forwards
 until it's completely effective.
+
+Quick Song -> 0 cost base, 5(8) Block.
+Bard didn't have any 0 cost block cards, and I thought that was by design
+until I realized this UPGRADES 0 cost.
+I like the idea of the card, and being 0 cost base
+would make it a lot pickable. So I made it 0 base,
+and upgrades to add the 3 block.
